--- a/MDpersistence/build.gradle
+++ b/MDpersistence/build.gradle
@@ -34,4 +34,22 @@ dependencies {
 }
 
 apply plugin: 'realm-android'
+apply plugin: 'com.novoda.bintray-release' // must be applied after your artifact generating plugin (eg. java / com.android.library)
+apply plugin: 'maven-publish'
+apply plugin: 'com.android.library'
 
+publish {
+
+    def groupProjectID = 'mosquito.digital.template.Persistence'
+    def artifactProjectID = 'MDPersistence'
+    def publishVersionID = '0.1.0'
+
+    userOrg = 'benjaminpollard'
+    repoName = 'MDPersistants'
+    groupId = groupProjectID
+    artifactId = artifactProjectID
+    publishVersion = publishVersionID
+    desc = 'MDPersistants'
+    website = 'https://github.com/MosquitoDigitalLtd/DatabaseService_Android'
+
+}
