--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,9 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "io.realm:realm-gradle-plugin:4.0.0"
+        classpath 'com.novoda:bintray-release:0.9.2'
     }
 }
 
