--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         google()
@@ -7,8 +6,11 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
-        classpath "io.realm:realm-gradle-plugin:3.7.2"
+        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath "io.realm:realm-gradle-plugin:4.0.0"
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.novoda:bintray-release:0.9.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
