--- a/MDpersistence/build.gradle
+++ b/MDpersistence/build.gradle
@@ -40,7 +40,7 @@ apply plugin: 'com.android.library'
 
 publish {
 
-    def groupProjectID = 'mosquito.digital.template.Persistence'
+    def groupProjectID = 'mosquito.digital.Persistence'
     def artifactProjectID = 'MDPersistence'
     def publishVersionID = '0.2.0'
 
