more detail changes

--- a/MDpersistence/build.gradle
+++ b/MDpersistence/build.gradle
@@ -43,8 +43,10 @@ publish {
     def groupProjectID = 'mosquito.digital.Persistence'
     def artifactProjectID = 'MDPersistence'
     def publishVersionID = '0.2.0'
+    def user='mosquito-digital'
+    def apiKey='8ac5e9504ca4ab4a5bd56a057dbb20321fbf0d6c'
 
-    userOrg = 'benjaminpollard'
+    userOrg = user
     repoName = 'MDPersistants'
     groupId = groupProjectID
     artifactId = artifactProjectID
