--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "mosquito.digital.template.Persistence"
+        applicationId "com.mosquito.persistenceservice"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
@@ -38,8 +39,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
-    implementation 'mosquito.digital.Persistence:MDPersistences:0.2.0'
+    implementation 'com.mosquito.persistenceservice:PersistenceServices:1.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
-apply plugin: 'realm-android'
