--- a/PersistenceService/build.gradle
+++ b/PersistenceService/build.gradle
@@ -10,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 102
-        versionName "1.0.2"
+        versionCode 103
+        versionName "1.0.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -40,8 +40,8 @@ publish {
     userOrg = 'mosquito-digital'
     repoName = 'PersistenceService'
     groupId = 'com.mosquito.persistenceservice'
-    artifactId = 'PersistenceService'
-    publishVersion = '1.0.2'
-    desc = 'PersistenceService'
+    artifactId = 'persistence-service'
+    publishVersion = '1.0.3'
+    desc = 'Persistence service as a Realm wrapper'
     website = 'https://github.com/MosquitoDigitalLtd/DatabaseService_Android'
 }
