--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,16 @@ apply plugin: 'realm-android'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
+
     defaultConfig {
         applicationId "com.mosquito.libs"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 102
-        versionName "1.0.2"
+        versionCode 103
+        versionName "1.0.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,12 +26,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "io.realm:realm-gradle-plugin:4.0.0"
-        classpath 'com.novoda:bintray-release:0.9.2'
     }
 }
 
@@ -39,7 +40,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.mosquito.persistenceservice:persistence-service:1.0.3'
+//    implementation 'com.mosquito.persistenceservice:persistence-service:1.0.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
